added spinner animation for data loading.

--- a/demo/delays.html
+++ b/demo/delays.html
@@ -31,6 +31,9 @@
   <div id="map" style="width: 900px; height: 500px"></div>
   <i>Up to date within one minute. Current maximum delay: 
     <span id="maxDelay"></span></i>
+  <span id="load" style="float: right; display: none">
+    <img src="load.gif" alt="">Loading updated data
+  </span>
 </body>
 </html>
   
