Fixed color ramp scaling and add the minimum delay.

--- a/demo/delays.html
+++ b/demo/delays.html
@@ -30,7 +30,9 @@
 <body>
   <div id="map" style="width: 900px; height: 500px"></div>
   <i>Up to date within one minute. Current maximum delay: 
-    <span id="maxDelay"></span></i>
+    <span id="maxDelay"></span>; Current minimum delay:
+    <span id="minDelay"></span>
+  </i>
   <span id="load" style="float: right; display: none">
     <img src="load.gif" alt="">Loading updated data
   </span>
