--- a/demo/delays.html
+++ b/demo/delays.html
@@ -28,7 +28,9 @@
   <script src="delays.js" type="text/javascript"></script>
 </head>
 <body>
-  <div id="map" style="width: 900px; height: 500px"></div>
+  <div id="map" style="width: 900px; height: 500px; float: left"></div>
+  <img src="legend.png" style="float: right">
+  <div style="clear: both"></div>
   <i>Up to date within one minute. Current maximum delay: 
     <span id="maxDelay"></span>; Current minimum delay:
     <span id="minDelay"></span>
