--- a/demo/delays.html
+++ b/demo/delays.html
@@ -22,6 +22,7 @@
 
 -->
 <head>
+  <title>TriMet Delays</title>
   <script src="jquery.min.js" type="text/javascript"></script>
   <script src="http://openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
   <script src="IDWLayer.js" type="text/javascript"></script>
